Updated to use CR2 product.